# testament-api

./: .env.sample  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2018-08-21-070705_create_entries/: down.sql  up.sql
migrations/2018-08-21-081430_create_user/: down.sql  up.sql
migrations/2018-08-22-055005_add_user_id_to_entries/: down.sql  up.sql
migrations/2018-09-02-014402_create_access_tokens/: down.sql  up.sql
migrations/2018-09-06-181321_add_created_at_and_updated_at_to_users/: down.sql  up.sql
src/: error_handlers.rs  lib.rs  main.rs  responses.rs  schema.rs
src/api/: auth.rs
src/helpers/: mysql.rs
src/infra/: mod.rs
src/infra/oauth/: google.rs  mod.rs
src/infra/token/: mod.rs  mysql_token_repository.rs
src/infra/user/: mod.rs  mysql_user_repository.rs
src/models/: entry.rs  mod.rs  token.rs  user.rs
src/models/auth/: google.rs  mod.rs
src/services/queries/: get_login_url.rs  mod.rs
tests/: test_404_response.rs  test_api_login.rs  test_user_repositories.rs  tests.rs
tests/infra/token/: mod.rs  test_mysql_token_repository.rs
tests/infra/user/: mod.rs  test_mysql_user_repository.rs
tests/models/token/: mod.rs  test_token_repository.rs
tests/models/user/: mod.rs  test_user_repositories.rs
