[package]
name = "testament_api"
version = "0.1.0"
authors = ["himanoa <matsunoappy@gmail.com>"]

[lib]
name = "testament"
path= "src/lib.rs"

[[bin]]
name = "testament-runner"
path= "src/main.rs"

[dependencies]
rocket = { version = "0.3.17" }
rocket_codegen = { version = "0.3.17" }
rocket_contrib = { version = "0.3.17" }
diesel = { version = "1.3.3", features = ["mysql", "r2d2", "chrono", "serde_json"] }
serde_json = { version = "1.0" }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.10.0" }
reqwest = { version = "0.9.5" }
oauth2 = { version = "2.0.0-alpha.2" }
url = { version = "1.7" }
failure = { version = "0.1.3" }
jsonwebtoken = { version = "2.0.3" }
dotenv = { version = "0.13.0" }
time = { version = "0.1"}
uuid = { version = "0.7.1", features=["v4"] }

[dev-dependencies]
mockito = { version = "0.13.0" }
speculate = { git = "https://github.com/utkarshkukreti/speculate.rs" }
parking_lot = { version = "0.6", features = ["nightly"] }
